--- a/src/main/titlebarview/titlebar.html
+++ b/src/main/titlebarview/titlebar.html
@@ -167,15 +167,16 @@ Distributed under the terms of the Modified BSD License.
       <div id="app-title" class="app-title">MLJAR Studio</div>
       
       <div id="right-widgets">
-        <div id="server-button">
+        <!-- <div id="server-button">
           <div id="server-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path d="M64 32C28.7 32 0 60.7 0 96v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM344 152c-13.3 0-24-10.7-24-24s10.7-24 24-24s24 10.7 24 24s-10.7 24-24 24zm96-24c0 13.3-10.7 24-24 24s-24-10.7-24-24s10.7-24 24-24s24 10.7 24 24zM64 288c-35.3 0-64 28.7-64 64v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V352c0-35.3-28.7-64-64-64H64zM344 408c-13.3 0-24-10.7-24-24s10.7-24 24-24s24 10.7 24 24s-10.7 24-24 24zm104-24c0 13.3-10.7 24-24 24s-24-10.7-24-24s10.7-24 24-24s24 10.7 24 24z"/></svg>
+
             <div id="server-notification-badge"></div>
           </div>
           <div id="server-label"></div>
-        </div>
+
+        </div> -->
         <!--<div id="menu-button" title="Show Menu">
           <svg
             width="18px"
@@ -207,14 +208,14 @@ Distributed under the terms of the Modified BSD License.
             <svg viewBox='0 0 10 10'><polygon points='10.2,0.7 9.5,0 5.1,4.4 0.7,0 0,0.7 4.4,5.1 0,9.5 0.7,10.2 5.1,5.8 9.5,10.2 10.2,9.5 5.8,5.1'/></svg>
           </div>
         </div>
-      </div>-->
+      </div>
     </div>
     <script>
       const appTitle = document.getElementById('app-title');
-      const serverButton = document.getElementById('server-button');
-      const serverNotificationBadge = document.getElementById('server-notification-badge');
-      const serverIcon = document.getElementById('server-icon');
-      const serverLabel = document.getElementById('server-label');
+      //const serverButton = document.getElementById('server-button');
+      //const serverNotificationBadge = document.getElementById('server-notification-badge');
+      //const serverIcon = document.getElementById('server-icon');
+      //const serverLabel = document.getElementById('server-label');
       //const menuButton = document.getElementById('menu-button');
       const minimizeButton = document.getElementById('minimize-button');
       const maximizeButton = document.getElementById('maximize-button');
@@ -234,7 +235,7 @@ Distributed under the terms of the Modified BSD License.
       });
 
       window.electronAPI.onShowServerStatus((show) => {
-        serverButton.style.display = show ? 'flex' : 'none';
+        //serverButton.style.display = show ? 'flex' : 'none';
 
         if (show) {
           updateServerStatus();
@@ -242,7 +243,7 @@ Distributed under the terms of the Modified BSD License.
       });
 
       window.electronAPI.onShowServerNotificationBadge((show) => {
-        serverNotificationBadge.style.display = show ? 'inline-block' : 'none';
+        //serverNotificationBadge.style.display = show ? 'inline-block' : 'none';
       });
 
       // menuButton.onclick = (ev) => {
@@ -274,35 +275,35 @@ Distributed under the terms of the Modified BSD License.
         window.electronAPI.closeWindow();
       };
 
-      serverButton.onclick = (ev) => {
-        ev.stopPropagation();
-        if (!serverButton.classList.contains('disabled')) {
-          window.electronAPI.showEnvSelectPopup();
-        }
-      };
+      // serverButton.onclick = (ev) => {
+      //   ev.stopPropagation();
+      //   if (!serverButton.classList.contains('disabled')) {
+      //     window.electronAPI.showEnvSelectPopup();
+      //   }
+      // };
 
       const updateStatusItemLocal = (serverInfo) => {
         const env = serverInfo.environment;
-        serverLabel.innerText = env.name;
+        // serverLabel.innerText = env.name;
         let packages = [];
         for (const name in env.versions) {
           packages.push(`${name}: ${env.versions[name]}`);
         }
-        serverButton.title = `Local server\n${serverInfo.url}\nroot: ${serverInfo.workingDirectory}\n${env.name} (${
-          env.path
-        })\n${packages.join(', ')}`;
-        serverButton.classList.remove('disabled');
+        // serverButton.title = `Local server\n${serverInfo.url}\nroot: ${serverInfo.workingDirectory}\n${env.name} (${
+        //   env.path
+        // })\n${packages.join(', ')}`;
+        // serverButton.classList.remove('disabled');
       };
 
       const updateStatusItemRemote = (serverInfo) => {
-        const url = new URL(serverInfo.url);
-        const isLocalUrl =
-          url.hostname === 'localhost' || url.hostname === '127.0.0.1';
+        // const url = new URL(serverInfo.url);
+        // const isLocalUrl =
+        //   url.hostname === 'localhost' || url.hostname === '127.0.0.1';
 
-        const connectionType = isLocalUrl ? 'Local' : 'Remote';
-        serverLabel.innerText = connectionType
-        serverButton.title = `${connectionType} connection\n${serverInfo.url}\nSession data ${serverInfo.persistSessionData ? '': 'not '}persisted`;
-        serverButton.classList.add('disabled');
+        // const connectionType = isLocalUrl ? 'Local' : 'Remote';
+        // serverLabel.innerText = connectionType
+        // serverButton.title = `${connectionType} connection\n${serverInfo.url}\nSession data ${serverInfo.persistSessionData ? '': 'not '}persisted`;
+        // serverButton.classList.add('disabled');
       };
 
       const updateServerStatus = () => {
